[package]
name = "suter-node"
version = "0.0.1"
authors = ["Glen"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "suter-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { path = "../substrate/core/sr-io" }
substrate-cli = { path = "../substrate/core/cli" }
primitives = { package = "substrate-primitives", path = "../substrate/core/primitives" }
substrate-executor = { path = "../substrate/core/executor" }
substrate-service = { path = "../substrate/core/service" }
inherents = { package = "substrate-inherents", path = "../substrate/core/inherents" }
transaction-pool = { package = "substrate-transaction-pool", path = "../substrate/core/transaction-pool" }
network = { package = "substrate-network", path = "../substrate/core/network" }
babe = { package = "substrate-consensus-babe", path = "../substrate/core/consensus/babe" }
babe-primitives = { package = "substrate-consensus-babe-primitives", path = "../substrate/core/consensus/babe/primitives" }
grandpa = { package = "substrate-finality-grandpa", path = "../substrate/core/finality-grandpa" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", path = "../substrate/core/finality-grandpa/primitives" }
substrate-client = {  path = "../substrate/core/client" }
sr-primitives = { path = "../substrate/core/sr-primitives", default-features = false }
basic-authorship = { package = "substrate-basic-authorship", path = "../substrate/core/basic-authorship" }
node_template_runtime = { package="suter-runtime", path = "runtime" }

[build-dependencies]
vergen = "3.0.4"
