[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-token'
version = "2.0.0-alpha.3"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template"

[dependencies]
primitive-types = { version = "0.6.2", default-features = false, features = ["codec"] }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
safe-mix = { default-features = false, version = '1.0.0' }
sp-runtime = { version = "2.0.0-alpha.2", default-features = false, path = "../../../../primitives/runtime" }


[dependencies.frame-support]
default-features = false
version = "2.0.0-alpha.2"
path = "../../../../frame/support"

[dependencies.system]
default-features = false
package = 'frame-system'
version = "2.0.0-alpha.2"
path = "../../../../frame/system"
[dev-dependencies.sp-core]
default-features = false
version = "2.0.0-alpha.2"
path = "../../../../primitives/core"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.0-alpha.2"
path = "../../../../primitives/io"

[dev-dependencies.sp-runtime]
default-features = false
version = "2.0.0-alpha.2"
path = "../../../../primitives/runtime"


[features]
default = ['std']
std = [
	'serde',
	'codec/std',
    'sp-core/std',
    'sp-runtime/std',
	'frame-support/std',
	'safe-mix/std',
	'system/std'
]
